# Scaling-Subsequence-Similarity-Join-Based-on-Dynamic-Time-Warping-CPU-GPU

./: README.md
CPU_version1/: AAAA.cpp  CMakeLists.txt  DTWMotifDiscoveryGUI.cpp  DTW_Motif_of_one_layer.cpp  LB_PETITJEAN.cpp  MON_DTW.cpp  MY_dtw_mpGUIV2.cpp  NEXT.cpp  SS-PrunedDTW.cpp  alpha_generater.cpp  compute_MASK_global.cpp  compute_shared_data.cpp  compute_shared_dataV3.cpp  compute_shared_dataV5.cpp  compute_shared_data_global.cpp  diag_fast.cpp  diag_mask_global.cpp  diag_mask_local.cpp  diag_mask_local_down.cpp  diag_mask_local_up.cpp  dist mpx_v201 selectedV4_.cpp  dist_LB_in_one_Line_O1_V2.cpp  dist_mpx_DIAGV3.cpp  dist_mpx_DIAGV3_fast.cpp  dist_mpx_DIAGV3_fastF.cpp  dist_mpx_v201_fast6.cpp  dist_mpx_v2O1_selectedV6_.cpp  dist_mpx_v2O1_selectedV6_test_pro_max.cpp  dr.cpp  dr_f.cpp  dtw.cpp  dtw_motifGUI.cpp  dtw_upd.cpp  fft.cpp  findDiscords.cpp  findMotifs.cpp  findNonZero.cpp  ifft.cpp  lb_keogh.cpp  lb_kim.cpp  (+6 more)
CPU_version1/alldef/: allclass.h  allstruct.h  elseoperation.h  fileoperations.h  matrix.h  typedefdouble.h
CPU_version1/allmatrixop/: Mean.cpp  addelementtofront.cpp  conj.cpp  convolve.cpp  dotproduct.cpp  doubledividedbymatrix.cpp  elementmultiply_complex.cpp  elementwisemultiply_nv.cpp  extractVector.cpp  extractvectorfromvector.cpp  isNAN.cpp  isempty.cpp  isinfinite.cpp  lower_upper_lemire.cpp  matrix_convertTo2DColOrder.cpp  matrix_convertTo2DRowOrder.cpp  matrix_false.cpp  matrix_transpose.cpp  maxinmatrix.cpp  meanwithoutNAN.cpp  mergevector.cpp  min_nv_includenan.cpp  min_v.cpp  mininmatrix.cpp  moving_mean.cpp  movmax.cpp  movmean.cpp  movmin.cpp  movstd.cpp  movsum.cpp  nomalise.cpp  norm_vector.cpp  or.cpp  plusvector.cpp  sortvec.cpp  std.cpp  stdwithomitnan.cpp  substractvector.cpp  sum_bool_matrix.cpp  sum_matrix.cpp  (+5 more)
CPU_version1/alltest/: test2DIAGV3.cpp  test2DTW.cpp  test2MY-dtw_mpguiv2.cpp  test2NEXT.cpp  test2V4.cpp  test2data.cpp  test2data3.cpp  test2dataV5.cpp  test2dtw_motifGUI.cpp  test2fasfF.cpp  test2fast.cpp  test2fast6.cpp  test2findIdx.cpp  test2loadfile.cpp  test2mpx_v2.cpp  test2selected6.cpp
CPU_version1/allunder/: underAAAA.h  underDIAGV3.h  underDTWGUI.h  underMY.h  underdtw.h  underfast.h  underfastF.h  undermpx_v2.h  underpromax.h
GPU_version1/: CMakeLists.txt
GPU_version1/alldef/: GPU_parameters.h  allldevice.cuh  allstruct.cuh  collect_indices_kernal_after_keogh.h  device_prefix_sum.cuh  dtw_cu_s.cuh  elseoperation.cuh  fileoperations.cuh  matrix.cuh  process_keogh_and_dtw_kernal.cuh  typedefdouble.cuh  warp_num_per_block.h
GPU_version1/alldtw/: ECG_511_EARLY_EXIT_DTW.cuh  dtw_511.cuh
GPU_version1/allmatrixop/: Mean.cu  addelementtofront.cu  conj.cu  convolve.cu  elementmultiply_complex.cu  elementwisemultiply_nv.cu  extractvectorfromvector.cu  fft.cu  findDiscords.cu  findMotifs.cu  findNonZero.cu  ifft.cu  isNAN.cu  isempty.cu  isinfinite.cu  linspace.cu  lower_upper_lemire.cu  mergevector.cu  min_nv_includenan.cu  min_v.cu  moving_mean.cu  movmean.cu  movsum.cu  nextpow2.cu  norm_vector.cu  plusvector.cu  rename.py  sortvec.cu  std.cu  substractvector.cu  sum_vector.cu  syn_bsfs.cu  vectordivision.cu  vectormultiply.cu
GPU_version1/allunder/: underAAAA.cuh  underDTWGUI.cuh  underdtw.cuh  undermpx_v2.cuh
GPU_version1/lib/: GLOBAL_DIAG.cu  diag_fast.cu  diag_mask_global.cu
GPU_version1/src/: AAAA.cu  DTWMotifDiscoveryGUI.cu  DTW_stairs.cu  DTW_stairs_without_shared_memory.cu  LB_Keogh_kernal.cu  LB_PETITJEAN.cu  LB_keogh_warp.cu  MON_DTW.cu  collect_indices_kernal_after_keogh.cu  compute_MASK_global.cu  compute_shared_data.cu  compute_shared_data_global.cu  device_prefix_sum.cu  diag_mask_local_up.cu  dtw.cu  dtw_kernal.cu  lb_keogh.cu  lb_kim.cu  loadfile.cu  mpx_v2.cu  new_dtw_motifGUI_malloc.cu
