cmake_minimum_required(VERSION 3.26)
project(debug_for_promax)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_BUILD_TYPE Release)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")

MATH(EXPR stack_size "1000*1024*1024") # 这将计算堆栈大小为100MB
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--stack,${stack_size}") # 这将设置链接器的堆栈大小选项
# 添加链接库路径
set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")

add_executable(debug_for_promax
        alldef/typedefdouble.h
        dist_mpx_v201_fast6.cpp
        alldef/matrix.h
        allmatrixop/matrix_transpose.cpp
        allmatrixop/matrix_false.cpp
        allmatrixop/matrix_convertTo2DRowOrder.cpp
        allmatrixop/matrix_convertTo2DColOrder.cpp
        allmatrixop/movmean.cpp
        allmatrixop/movstd.cpp
        allmatrixop/doubledividedbymatrix.cpp
        allmatrixop/extractVector.cpp
        allmatrixop/movmax.cpp
        allmatrixop/movmin.cpp
        dr.cpp
        alldef/elseoperation.h
        dr_f.cpp
        allmatrixop/plus.cpp
        allmatrixop/plusvector.cpp
        allmatrixop/movsum.cpp
        allmatrixop/vectormultiply.cpp
        allmatrixop/norm_vector.cpp
        allmatrixop/sum_vector.cpp
        allmatrixop/extractvectorfromvector.cpp
        allmatrixop/or.cpp
        allmatrixop/sum_bool_matrix.cpp
        alltest/test2fast6.cpp
        allunder/underdtw.h
        allmatrixop/vectorcopy.cpp
        allmatrixop/addelementtofront.cpp
        "dist mpx_v201 selectedV4_.cpp"
        allmatrixop/substractvector.cpp
        allmatrixop/std.cpp
        alltest/test2V4.cpp
        alltest/test2V4.cpp
        dist_mpx_DIAGV3_fastF.cpp
        compute_shared_dataV5.cpp
        allmatrixop/maxinmatrix.cpp
        allmatrixop/mininmatrix.cpp
        alltest/test2dataV5.cpp
        allunder/underfastF.h
        allmatrixop/vectordivision.cpp
        allmatrixop/meanwithoutNAN.cpp
        alltest/test2fasfF.cpp
        MY_dtw_mpGUIV2.cpp
        lb_upd.cpp
        dtw_upd.cpp
        NEXT.cpp
        NEXT.cpp
        allunder/underMY.h
        allmatrixop/isempty.cpp
        alltest/test2NEXT.cpp
        dist_mpx_v2O1_selectedV6_test_pro_max.cpp
        linspace.cpp
        allmatrixop/mergevector.cpp
        allmatrixop/sum_vector_bool.cpp
        compute_shared_data.cpp
        allunder/underpromax.h
        alltest/test2data.cpp
        allmatrixop/sum_matrix.cpp
        dist_LB_in_one_Line_O1_V2.cpp
        allmatrixop/stdwithomitnan.cpp
        allmatrixop/dotproduct.cpp
        allmatrixop/elementwisemultiply_nv.cpp
        allmatrixop/Mean.cpp
        alltest/test2LB.cpp
        alltest/test2promax.cpp
        dist_mpx_DIAGV3_fast.cpp
        compute_shared_dataV3.cpp
        allunder/underfast.h
        alltest/test2fast.cpp
        alltest/test2data3.cpp
        alldef/allstruct.h
        dist_mpx_DIAGV3.cpp
        allunder/underDIAGV3.h
        alltest/test2DIAGV3.cpp
        dist_mpx_v2O1_selectedV6_.cpp
        mpx_v2.cpp
        allmatrixop/isinfinite.cpp
        findNonZero.cpp
        allmatrixop/isNAN.cpp
        allmatrixop/moving_mean.cpp
        allunder/undermpx_v2.h
        findDiscords.cpp
        allmatrixop/sortvec.cpp
        findMotifs.cpp
        findMotifs.cpp
        allmatrixop/convolve.cpp
        allmatrixop/nextpow2.cpp
        fft.cpp
        allmatrixop/conj.cpp
        allmatrixop/elementmultiply_complex.cpp
        ifft.cpp
        allmatrixop/crosscov.cpp
        allmatrixop/min_nv_includenan.cpp
        allmatrixop/max_v_idx.cpp
        dtw_motifGUI.cpp
        allmatrixop/min_v.cpp
        DTWMotifDiscoveryGUI.cpp
        allunder/underDTWGUI.h
        AAAA.cpp
        loadfile.cpp
        alldef/fileoperations.h
        alltest/test2selected6.cpp
        alltest/test2mpx_v2.cpp
        alltest/test2findIdx.cpp
        alltest/test2findmotifs.cpp
        alltest/test2moving_mean.cpp
        alltest/test2dtw_motifGUI.cpp
        alltest/test2MY-dtw_mpguiv2.cpp
        alltest/test2DTW.cpp
        allunder/underAAAA.h
        alltest/test2loadfile.cpp
        DTW_Motif_of_one_layer.cpp
        allmatrixop/vectordividedbydouble.cpp
        allmatrixop/lower_upper_lemire.cpp
        sampling.cpp
        allmatrixop/nomalise.cpp
        diag_fast.cpp
        diag_mask_local_up.cpp
        new_dtw_motifGUI.cpp
        lb_kim.cpp
        lb_kim.cpp
        lb_keogh.cpp
        LB_PETITJEAN.cpp
        dtw.cpp
        diag_mask_global.cpp
        alpha_generater.cpp
        alldef/allclass.h
        diag_mask_local_down.cpp
        diag_mask_local.cpp
        SS-PrunedDTW.cpp
        SS-PrunedDTW.cpp
        alltest/test_for_SS_dtw.cpp
        alltest/test_for_SS_dtw.cpp
        MON_DTW.cpp
        MON_DTW.cpp
        compute_shared_data_global.cpp
        compute_MASK_global.cpp
)
